Fixed an issue regarding toolbar z-index

--- a/src/app/ui/toolbar/toolbar.scss
+++ b/src/app/ui/toolbar/toolbar.scss
@@ -7,6 +7,7 @@
     border-bottom: 1px solid var(--border-color);
     position: sticky;
     top: 0;
+    z-index: 100;
 }
 
 .logo h1 {
